--- a/review.css
+++ b/review.css
@@ -9,11 +9,23 @@
     margin: auto;
 }
 
-nav {
-    display: inline-block;
+#comments header{
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
-nav a {
+#comments .taught{
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+}
+
+#comments nav{
+   display: inline-block;
+}
+
+#comments nav a {
     color: #FFC700;
     text-decoration: none;
     margin-right: 45px;
@@ -95,44 +107,106 @@ footer{
     background: rgba(255, 199, 0, 0.4);
     border: 1px solid #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
-.firma{
+#last-comments .firma{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.firma{
     padding-top: 62px;
     padding-bottom: 62px;
 }
 
-.down a{
+#last-comments .down a{
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     color: black;
 }
 
-.teach {
-    display: inline-block;
+#last-comments .teach {
     color: #000000;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
-    margin-right: 30px;
+    font-size: 20px;
     text-decoration: none;
 }
 
-.taught{
-    display: flex;
-    justify-content: space-between;
+#support .tech{
+    background: #454545;
+    width: 310px;
+    height: 50px;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 18px;
+    padding: 14px 86px;
+    margin-top: 54px;
+    margin-bottom: 113px;
 }
 
-@media(max-width:800px){
+
+@media(max-width:1240px){
     .container{
         max-width: 90%;
+    }
+    #last-comments .teach{
+        font-size: 25px;
+    }
+}
+
+@media(max-width:1080px){
+    #comments nav a{
+        font-size: 20px; 
+    }
+    #comments .teach{
+        font-size: 20px;
+    }
+    #last-comments .down a{
+        font-size: 20px;
+    }
+    #last-comments .teach{
+        font-size: 20px;
+    }
+}
+@media(max-width:1000px){
+    #last-comments .down a{
+        font-size: 20px;
+        margin-right: 35px;
+    }
+}
+
+@media(max-width:900px){
+    #last-comments .down a{
+        font-size: 17px;
+        margin-right: 25px;
+    }
+    #comments nav a{
+        font-size: 20px; 
+        margin-right: 25px;
+    }
+}
+
+
+@media(max-width:800px){
+    #reviews .review{
+        max-width: 70%;
+    }
+    #comments nav a{
+        font-size: 20px;
+        margin-right:20px;
+    }
+    #last-comments .down a{
+        font-size: 17px;
+        margin-right: 20px;
+    }
+    #last-comments .teach{
+        font-size: 17px;
+    }
+    #comments .teach{
+        font-size: 17px;
     }
     #reviews h2{
         font-size: 20px;
@@ -142,7 +216,21 @@ footer{
     }
 }
 
-@media(max-width:695px){
+@media(max-width:700px){
+    #comments nav a{
+        font-size: 17px;
+        margin-right:15px;
+    }
+    #comments .teach{
+        font-size: 15px;
+    }
+    #last-comments .teach{
+        font-size: 14px;
+    }
+    #last-comments .down a{
+        font-size: 15px;
+        margin-right: 15px;
+    }
     #reviews h2{
         font-size: 17px;
     }
@@ -151,7 +239,24 @@ footer{
     }
 }
 
-@media(max-width: 570px){
+@media(max-width: 600px){
+    #reviews .review{
+        max-width: 60%;
+    }
+    #comments nav a{
+        font-size: 14px;
+        margin-right:10px;
+    }
+    #comments .teach{
+        font-size: 14px;
+    }
+    #last-comments .teach{
+        font-size: 12px;
+    }
+    #last-comments .down a{
+        font-size: 13px;
+        margin-right: 10px;
+    }
     #reviews h2{
         font-size: 15px;
     }
@@ -160,7 +265,22 @@ footer{
     }
 }
 
-@media(max-width: 400px){
+@media(max-width: 500px){
+    #comments nav a{
+        font-size: 12px;
+        margin-right:6px;
+    }
+    #comments .teach{
+        font-size: 12px;
+        margin-top: 3px;
+    }
+    #last-comments .teach{
+        font-size: 10px;
+    }
+    #last-comments .down a{
+        font-size: 11px;
+        margin-right: 5px;
+    }
     #reviews h2{
         font-size: 15px;
         margin-top: 5px;
@@ -168,5 +288,56 @@ footer{
     #reviews p{
         font-size: 11px;
     }
-    
+    #reviews .review{
+        max-width: 70%;
+    }
 }
+
+@media(max-width: 400px){
+    #comments nav a{
+        font-size: 10px;
+        margin-right:3px;
+    }
+    #comments .teach{
+        font-size: 9px;
+        margin-top: 6px;
+    }
+    #last-comments .teach{
+        font-size: 8px;
+        font-weight: bold;
+    }
+    #last-comments .down a{
+        font-size: 8px;
+        margin-right: 3px;
+        font-weight: bold;
+    }
+    #reviews h2{
+        font-size: 13px;
+        margin-top: 5px;
+    }
+    #reviews p{
+        font-size: 10px;
+    }
+    #reviews .review{
+        max-width: 90%;
+    }
+    #link_2 a{
+        margin-left: 3px;
+        margin-right: 3px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-size: 15px;
+        line-height: 18px;
+        color: #000000;
+        font-family: 'Inter', sans-serif;
+        font-weight: 500;
+    }
+    #link_2 .back{
+        font-size: 13px;
+    }
+    
+    #link_2 .go{
+        font-size: 13px;
+    }
+}
+
