--- a/review.css
+++ b/review.css
@@ -103,13 +103,7 @@
     border-bottom:  1px solid #FFC700;
 }
 
-footer{
-    background: rgba(255, 199, 0, 0.4);
-    border: 1px solid #000000;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-}
+
 
 #last-comments .firma{
     display: flex;
@@ -134,18 +128,51 @@ footer{
     text-decoration: none;
 }
 
-#support .tech{
-    background: #454545;
-    width: 310px;
-    height: 50px;
-    text-decoration: none;
-    color: #FFFFFF;
-    font-weight: 300;
-    font-size: 18px;
-    padding: 14px 86px;
-    margin-top: 54px;
-    margin-bottom: 113px;
-}
+footer {
+        margin-top: 30px;
+        background: rgba(255, 199, 0, 0.4);
+        border: 1px solid #000000;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    
+    .firma {
+        padding-top: 62px;
+    }
+    
+    #down a {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        color: black;
+    }
+    
+    .firma {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .tech {
+        background: #454545;
+        display: inline-block;
+        text-decoration: none;
+        color: #FFFFFF;
+        font-weight: 300;
+        font-size: 18px;
+        padding: 14px 86px;
+        margin-top: 54px;
+        margin-bottom: 113px;
+    }
+    
+    #cheater {
+        display: flex;
+        justify-content: flex-end;
+    }
+    
+    #down a {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        color: black;
 
 
 @media(max-width:1240px){
